202301110
Correct RTL-SDR Bandviewer Span width
Allow basic RTL-SDR Bandviewer with Waveshare Screen

202212110
Pin VLC to use RPi archive version
Update Buster Legacy Version for new builds

202212040
Amélioration transpondeur DVB-S

202210180
Dev Update f4dvk

202207170
Add RTL-SDR and Airspy versions of Bandviewer

202207140
Remove hold on VLC and update to latest version which works with Portsdown

202206220
Roll back and hold VLC to version 3.0.12

202206050
Ajout VLC RX Leandvb
FastLock OFF si DVB-S2

202203110
web control résolution fenêtre automatique

202203060
Correction nom de domaine

202203050
Prise en charge partielle écran 3.5 pouces Web Control

202203031
Visualisation Sarsat Decoder Web Access

202203030
Visualisation RX Web Access

202202260
Initial implementation of Web Access

202111110
Infos leandvb Forward

202111061
Correction bug transpondeur DATV

202111060
Ajout DVB-S2 transpondeur (Forward) (Avec RTL en RX et Lime en TX)

202111011
Ajout SR 92 en TX

202111010
Amélioration détection perte verrouillage DVB-S2

202110300
Activation du mode audio off
Changement formats webcam c525 (C170)

202110270
Modifications paramètres RX leandvb

202110080
Ajout Streaming F5ZBC

202108230
Allow system update release info change

202107020
Correct DVB-T Frequency Calculation

202105310
RX Sarsat activation/désactivation CRC NULL (Balise F1LVT Checksum à 0)

202105140
Suppression RX 8PSK car detection auto avec leandvb

202104290
Add LimeSDR USB to Band Viewer
Band Viewer Enhancements

202104130
Add Lime Band Viewer

202102160
New builds based on Raspios 2021-01-11
Update Limesuite Version to 20.10
Tidy LimeFPGA builds
Display Required TS Bitrate on Info Screen
Improve Jetson HDMI video quality
Initial LimeSDR Mini DVB-T capability

202001170
Correction buffer RX avec lime

202101160
Filtre RRC leandvb
Tempo PTT lime de 8s à 10s

202101091
Restauration format vidéo

202012010
Ajout entrée HDMI Usb (expérimental)

202011210