@@ -1,5 +1,5 @@
 #!/bin/bash
 
-sudo killall scan.sh & sudo killall rtl_power & /home/pi/rpidatv/406/reset_usb & sudo killall perl & sudo killall rtl_fm & sudo killall dec406_V6 & sudo killall sox
+sudo killall scan.sh & sudo killall rtl_power & /home/pi/rpidatv/406/reset_usb & sudo killall perl & sudo killall rtl_fm & sudo killall dec406_V6 & sudo killall sox & sudo killall aplay
 
 exit
